<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Options">
        <menu>
            <group android:checkableBehavior="single"
                android:title="Test">
                <item
                    android:id="@+id/nav_voting"
                    android:icon="@drawable/ic_voting"
                    android:title="@string/voting" />
                <item
                    android:id="@+id/nav_next_meeting"
                    android:icon="@drawable/ic_next_meeting"
                    android:title="@string/next_meeting"/>
                <!--<item-->
                    <!--android:id="@+id/nav_take_up_role"-->
                    <!--android:icon="@drawable/ic_take_up_role"-->
                    <!--android:title="@string/take_up_role"/>-->
                <item
                    android:id="@+id/nav_timer"
                    android:icon="@drawable/ic_timer"
                    android:title="@string/timer"/>
            </group>
        </menu>
    </item>

    <item android:title="More Options">
        <menu>
            <group android:checkableBehavior="single"
                android:title="Test">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>

        </menu>
    </item>


</menu>